--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DMVCodeX/Book-Management-API#readme",
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.18.2",
