--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/DMVCodeX/Book-Management-API#readme",
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "apollo-server": "^3.12.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
