--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "prisma": "^4.14.1"
   }
 }
