--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/nodemon app.js --exec babel-node --"
+    "start": "node_modules/.bin/nodemon src/app.js --exec babel-node --"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DMVCodeX/Book-Management-API#readme",
   "dependencies": {
+    "@apollo/server": "^4.7.1",
     "@prisma/client": "^4.14.1",
     "apollo-server": "^3.12.0",
     "babel-cli": "^6.26.0",
@@ -27,6 +28,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "nodemon": "^2.0.22",
