--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "book-management-api",
   "version": "1.0.0",
   "description": "book management app",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
